--- a/src/projects/index.liquid
+++ b/src/projects/index.liquid
@@ -94,7 +94,7 @@ title: Projects
               </template>
 
               <template x-if="project.image">
-                <img class="lightbox w-full h-auto rounded-lg shadow-xl dark:shadow-gray-800 mb-3 border-2 border-gray-500" :src="project.image" alt="project screenshot" />
+                <img :class="`lightbox w-full h-auto rounded-lg mb-3 ${project.transparentImage ? '' : 'shadow-xl dark:shadow-gray-800 border-2 border-gray-500'}`" :src="project.image" alt="project screenshot" />
               </template>
               
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white name" x-text="project.name"></h5>
