--- a/src/main.css
+++ b/src/main.css
@@ -69,8 +69,11 @@
 /* ===== VIEW-TIMELINE-IN-OUT */
 @keyframes enter-exit {
 	entry 0%  {
-		opacity: 0; transform: translateY(100%);
+		opacity: 0; transform: translateY(50%);
 	}
+  entry 50% {
+    opacity: 0.25; transform: translateY(25%);
+  }
 	entry 100%  {
 		opacity: 1; transform: translateY(0);
 	}
@@ -78,8 +81,11 @@
 	exit 0% {
 		opacity: 1; transform: translateY(0);
 	}
+  exit 50% {
+    opacity: 0.25; transform: translateY(-25%);
+  }
 	exit 100% {
-		opacity: 0; transform: translateY(-100%);
+		opacity: 0; transform: translateY(-50%);
 	}
 }
 
@@ -117,14 +123,14 @@
     animation-timeline: scroll();
     animation-range: 0 100vh;
   }
-  #home-header > nav > div > a {
+  #home-header h1 > a {
     @apply text-8xl mb-6;
     animation: morph-home-link linear both;
     animation-timeline: scroll();
     animation-range: 0 100vh;
   }
   @media (max-width: 640px) {
-    #home-header > nav > div > a {
+    #home-header h1 > a {
       @apply text-6xl;
     }
   }
@@ -143,17 +149,20 @@
   }
   @media (min-width: 768px) {
     #home-header ul a {
-      @apply text-xl text-gray-900 dark:text-gray-100 hover:text-primary-600 dark:hover:text-primary-400 border-b border-current rounded-none pb-1 hover:pb-0 transition-all;
+      @apply text-xl text-gray-900 dark:text-gray-100 hover:text-primary-600 dark:hover:text-primary-400 underline rounded-none underline-offset-8 hover:underline-offset-2 transition-all;
       animation: morph-items linear both;
       animation-timeline: scroll();
       animation-range: 0 100vh;
     }
   }
 
+  #home-section-container {
+    view-timeline: --home-section-container;
+  }
+
   #home-i-am {
-    animation: appear backwards;
-    animation-range: 175vh 200vh;
-    animation-timeline: scroll();
+    animation: appear both;
+    animation-timeline: --home-section-container;
   }
   #home-i-am-name {
     overflow: clip;
@@ -223,19 +232,27 @@
 
 @keyframes morph-items {
   50% {
-    border-color: transparent;
+    @apply decoration-transparent;
   }
   100% {
-    @apply border-b-0 pb-0 text-base;
-    border-color: transparent;
+    @apply decoration-transparent text-base no-underline;
   }
 }
 @keyframes appear {
-  0% {
+  entry 0% {
     opacity: 0;
   }
-  100% {
+  entry 75% {
+    opacity: 0;
+  }
+  entry 100% {
     opacity: 1;
+  }
+  exit 75% {
+    opacity: 1;
+  }
+  exit 100% {
+    opacity: 0;
   }
 }
 @keyframes scroll-in-out {
