--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -36,19 +36,5 @@ layout: skeleton.liquid
     {{ content }}
   </main>
   
-  <footer
-      class="rounded-lg shadow m-4 bg-white/95 backdrop-blur dark:bg-transparent supports-[backdrop-filter]:bg-orange-100/60 dark:supports-[backdrop-filter]:bg-primary-900/40 border-gray-900/10 dark:border-gray-50/[0.06] border">
-    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-200">© 2024 Siddhant Kameswar</span>
-    </div>
-  </footer>
-  <script>
-    document.getElementById("navbar-toggle").addEventListener("click", () => document.getElementById("navbar-default").classList.toggle("hidden"));
-
-    document.addEventListener("click", e => {
-      if (e.target.classList?.contains("lightbox")) {
-        e.target.requestFullscreen();
-      }
-    });
-  </script>
+  {% render 'footer.html' %}
 </body>
