SEO, robots.txt, sitemap

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -3,6 +3,7 @@ layout: skeleton.liquid
 tags: navbar
 order: 0
 title: Home
+description: "Siddhant Kameswar - student passionate about computers, programming, and more"
 ---
 
 <body class="bg-orange-50 dark:bg-orange-950 lg:bg-white lg:dark:bg-black lg:bg-gradient-to-r dark:from-red-950/50 dark:via-orange-950 dark:to-red-950/50 min-h-full from-red-100/50 via-orange-100 to-red-100/50">
@@ -44,20 +45,24 @@ title: Home
   </header>  
   <section class="py-8 px-4 mx-auto max-w-4xl text-center lg:px-12 flex h-screen items-center justify-center flex-col home-section">
     <p
-      class="text-2xl md:text-4xl font-medium text-gray-900 dark:text-white animate-enter-exit my-auto">
-      I'm <span class="md:text-6xl font-bold text-transparent bg-gradient-to-r from-orange-900 to-rose-900 dark:from-orange-200 dark:to-rose-200 bg-clip-text text-nowrap inline-block">Siddhant Kameswar</span>, a <span class="decoration-wavy decoration-2 decoration-orange-900 dark:decoration-orange-200 underline-offset-8 underline">passionate high school student</span>.
+      class="text-2xl md:text-4xl font-medium text-gray-900 dark:text-white animate-enter-exit my-auto md:leading-relaxed">
+      I'm <span class="md:text-6xl font-bold text-transparent bg-gradient-to-r from-orange-900 to-rose-900 dark:from-orange-200 dark:to-rose-200 bg-clip-text text-nowrap inline-block">Siddhant Kameswar</span>, a <span class="decoration-wavy decoration-2 decoration-orange-900 dark:decoration-orange-200 underline-offset-4 md:underline-offset-8 underline">high school student</span> passionate about computers, programming, and more.
     </p>
+    
     <p class="text-lg md:text-xl text-gray-900 dark:text-white animate-enter-exit mb-auto">
       I've built complex <a class="font-bold hover:underline" href="/projects/?c=web-development">web applications</a> and <a class="font-bold hover:underline" href="/projects/?c=browser-extension-development">browser extensions</a>, developed countless <a href="/projects/?c=android-app-development" class="font-bold hover:underline">mobile apps</a>, and worked with <a class="font-bold hover:underline" href="/projects/?c=electronics-and-IOT">embedded systems and IOT</a>, just to name a few things.
     </p>
+    
     <p class="text-lg font-bold text-gray-900 dark:text-white animate-enter-exit mb-6">
       View some of my best projects below:
     </p>
+    
     <button
       class="text-orange-500 bg-orange-200/25 border border-current hover:bg-orange-200 focus:outline-none rounded-full inline-flex items-center dark:bg-primary-900/25 dark:text-primary-500/75 dark:hover:bg-primary-900 p-2.5 animate-bounce mb-auto btn-scroll-next">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 13.5 12 21m0 0-7.5-7.5M12 21V3" />
       </svg>
+      <span class="sr-only">Next section</span>
     </button>
   </section>
 
@@ -102,6 +107,7 @@ title: Home
                    class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 13.5 12 21m0 0-7.5-7.5M12 21V3" />
               </svg>
+              <span class="sr-only">Next section</span>
             </button>
           </div>
         </section>
