--- a/src/projects/index.liquid
+++ b/src/projects/index.liquid
@@ -3,6 +3,7 @@ layout: base.liquid
 tags: navbar
 order: 1
 title: Projects
+description: "An incomplete list of my projects"
 ---
 
 <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white underline underline-offset-3 decoration-8 decoration-primary-400 dark:decoration-primary-600">Projects:</h1>
