--- a/src/projects/skills.liquid
+++ b/src/projects/skills.liquid
@@ -4,6 +4,7 @@ tags: navbar
 order: 2
 permalink: "/skills/"
 title: "Skills"
+description: "Programming languages and tools I've worked with"
 ---
 
 <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white underline underline-offset-3 decoration-8 decoration-primary-400 dark:decoration-primary-600">Skills:</h1>
