--- a/src/index.liquid
+++ b/src/index.liquid
@@ -88,11 +88,11 @@ description: "Siddhant Kameswar - student passionate about computers, programmin
               class="max-w-2xl p-6 border rounded-lg bg-orange-100/50 border-orange-200 dark:bg-orange-900/25 dark:border-orange-800/50 shadow-lg shadow-orange-200/50 dark:shadow-orange-950/50 mb-3 text-center">
               
               {% if project.image %}
-                <img class="lightbox rounded-lg dark:shadow-gray-900 mb-6 max-h-96 mx-auto {% if not project.transparentImage %}shadow-xl{% endif %}"
+                <img class="lightbox rounded-lg dark:shadow-gray-900 mb-6 max-h-96 mx-auto {% if not project.transparentImage %}shadow-xl{% endif %}" loading="lazy"
                      src="{{ project.image }}" alt="project screenshot" />
               {% endif %}
               
-              <h3 class="mb-3 text-4xl font-bold tracking-tight text-gray-900 dark:text-white">{{ project.name }}</h3>
+              <h2 class="mb-3 text-4xl font-bold tracking-tight text-gray-900 dark:text-white">{{ project.name }}</h2>
               <p class="font-normal text-lg text-gray-900 dark:text-gray-100 mb-3">{{ project.description | truncate: 200 }}</p>
             </div>
             
