--- a/src/_includes/skeleton.liquid
+++ b/src/_includes/skeleton.liquid
@@ -14,6 +14,8 @@
         Siddhant Kameswar
     </title>
     <link rel="stylesheet" href="/main.css" />
+    <!-- because lightningcss -->
+    <style>@keyframes appear{entry 0%{opacity:0;}entry 75%{opacity:0;}entry 100%{opacity:1;}exit 75%{opacity:1;}exit 100%{opacity:0;}}</style>    
   </head>
   {{ content  }}
 </html>
