--- a/src/contact.liquid
+++ b/src/contact.liquid
@@ -16,9 +16,8 @@ description: "Contact me"
     <kbd
       class="px-1.5 py-1 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg dark:bg-gray-700 dark:text-gray-100 dark:border-gray-500">siddhant [at] kameswar [dot] com</kbd>)
   </p>
-
   
-
+  <!-- contact form -->
   <form class="max-w-lg">
     <div class="mb-3">
       <label for="input-email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email:</label>
@@ -35,24 +34,48 @@ description: "Contact me"
       <textarea id="input-message" name="message" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-prim focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" required rows="4"></textarea>
     </div>
 
-    <div class="cf-turnstile" data-sitekey="1x00000000000000000000AA"></div>
+    <div class="cf-turnstile" data-sitekey="{{ turnstileKey }}"></div>
+
+    <p id="error-message" class="text-rose-500 mb-2 empty:hidden"></p>
       
     <button type="submit" class="text-white bg-primary-500 hover:bg-primary-600 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Submit</button>
   </form>
+
+  <p class="text-gray-900 dark:text-white text-lg" id="success-message" hidden>Thanks for contacting me!</p>
 
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" defer></script>
 
   <script>
     const form = document.querySelector("form");
+    const errorMessage = document.getElementById("error-message");
+    const successMessage = document.getElementById("success-message");
     form.addEventListener("submit", async e => {
       e.preventDefault();
+      e.submitter.disabled = true;
 
       const data = new FormData(form);
-      const response = await fetch("/api/contact", {
-        method: "POST",
-        body: data
-      });
-      console.log(await response.json());
+
+      try {
+        const response = await fetch("/api/contact", {
+          method: "POST",
+          body: data
+        });
+        const result = await response.json();
+
+        // surface any errors
+        if (result.error) {
+          errorMessage.textContent = result.error;
+        } else {
+          errorMessage.textContent = "";
+
+          form.hidden = true;
+          successMessage.hidden = false;
+        }
+      } catch (err) {
+        errorMessage.textContent = err.message;
+      }
+
+      e.submitter.disabled = false;
     });
   </script>
 </section>
