--- a/src/index.liquid
+++ b/src/index.liquid
@@ -7,6 +7,7 @@ description: "Siddhant Kameswar - student passionate about computers, programmin
 ---
 
 <body class="bg-orange-50 dark:bg-orange-950 lg:bg-white lg:dark:bg-black lg:bg-gradient-to-r dark:from-red-950/50 dark:via-orange-950 dark:to-red-950/50 min-h-full from-red-100/50 via-orange-100 to-red-100/50" id="home-body">
+  <div id="home-backdrop" class="hidden"></div>
 
   <header id="home-header">
     <nav class="z-50 bg-transparent border border-transparent mt-3 mx-3 rounded-lg top-3 sticky mb-6">
@@ -116,14 +117,21 @@ description: "Siddhant Kameswar - student passionate about computers, programmin
   </div>
     
   <section class="flex h-screen items-center justify-center flex-col home-section" id="last-home-section">
-    <p class="text-lg md:text-xl text-gray-900 dark:text-white animate-enter-exit mb-12">
+    <p class="text-xl md:text-2xl text-gray-900 dark:text-white animate-enter-exit mb-12">
       View <a class="font-bold text-orange-700 dark:text-orange-300 hover:underline" href="/projects/">all of my
       projects</a> or <a class="font-bold text-orange-700 dark:text-orange-300 hover:underline"
                          href="/contact/">contact me</a>!
     </p>
 
-    <p class="md:text-lg text-gray-900 dark:text-white animate-enter-exit">
-      Check out my <a href="https://github.com/grimsteel/" target="_blank" rel="noreferrer no opener" class="font-semibold hover:underline">GitHub profile</a>!</p>
+    <p class="text-lg md:text-xl text-gray-900 dark:text-white animate-enter-exit flex items-center">
+      Check out my
+      <a href="https://github.com/grimsteel/" target="_blank" rel="noreferrer no opener" class="font-semibold hover:underline inline-flex items-center gap-3 flex-row-reverse ms-3">
+        GitHub profile
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <path
+            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+        </svg>
+      </a>!
     </p>
   </section>
   
