--- a/src/index.liquid
+++ b/src/index.liquid
@@ -9,7 +9,7 @@ description: "Siddhant Kameswar - student passionate about computers, programmin
 <body class="bg-orange-50 dark:bg-orange-950 lg:bg-white lg:dark:bg-black lg:bg-gradient-to-r dark:from-red-950/50 dark:via-orange-950 dark:to-red-950/50 min-h-full from-red-100/50 via-orange-100 to-red-100/50" id="home-body">
   <div id="home-backdrop" class="hidden"></div>
 
-  <header id="home-header">
+  <header id="home-header" class="contents">
     <nav class="z-50 bg-transparent border border-transparent mt-3 mx-3 rounded-lg top-3 sticky mb-6">
       <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-2">
         <!-- left side of navbar - my name-->
