--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -1,7 +1,7 @@
 ---
 layout: skeleton.liquid
 ---
-<body class="bg-white dark:bg-black bg-gradient-to-r dark:from-red-950/50 dark:via-orange-950 dark:to-red-950/50 min-h-full from-red-100/50 via-orange-100 to-red-100/50">
+<body class="bg-orange-100/50 dark:bg-[#270D05] min-h-full">
 
   <header class="inline">
     <nav class="z-50 sticky top-3 bg-transparent border border-transparent mt-3 mb-6 mx-3 rounded-lg navbar">
