--- a/src/index.liquid
+++ b/src/index.liquid
@@ -6,7 +6,7 @@ title: Home
 description: "Siddhant Kameswar - student passionate about computers, programming, and more"
 ---
 
-<body class="bg-orange-50 dark:bg-orange-950 lg:bg-white lg:dark:bg-black lg:bg-gradient-to-r dark:from-red-950/50 dark:via-orange-950 dark:to-red-950/50 min-h-full from-red-100/50 via-orange-100 to-red-100/50" id="home-body">
+<body class="bg-orange-100/50 dark:bg-[#270D05] min-h-full" id="home-body">
   <div id="home-backdrop" class="hidden"></div>
 
   <header id="home-header" class="contents">
@@ -72,7 +72,7 @@ description: "Siddhant Kameswar - student passionate about computers, programmin
     <p class="mb-12 text-2xl font-medium fixed top-20 text-center md:text-start text-gray-900 dark:text-gray-100 justify-center items-center gap-3 flex-wrap z-40 bg-white/[.01] backdrop-blur p-3 rounded w-full flex" id="home-i-am">
       I've worked with
       <span
-        class="md:text-4xl font-bold text-nowrap relative inline-block" id="home-i-am-name">
+        class="md:text-4xl font-bold text-nowrap relative inline-block text-center lg:text-left" id="home-i-am-name">
         <span>web applications</span>
         <span>native desktop applications</span>
         <span>mobile apps</span>
@@ -117,7 +117,7 @@ description: "Siddhant Kameswar - student passionate about computers, programmin
   </div>
     
   <section class="flex h-screen items-center justify-center flex-col home-section" id="last-home-section">
-    <p class="text-xl md:text-2xl text-gray-900 dark:text-white animate-enter-exit mb-12">
+    <p class="text-xl md:text-2xl text-gray-900 dark:text-white animate-enter-exit mb-12 text-center">
       View <a class="font-bold text-orange-700 dark:text-orange-300 hover:underline" href="/projects/">all of my
       projects</a> or <a class="font-bold text-orange-700 dark:text-orange-300 hover:underline"
                          href="/contact/">contact me</a>!
